# code-explain

./: embed.py  main.py  pyproject.toml  query.py
